--- a/ContactMangAPI/ContactMangAPI.csproj
+++ b/ContactMangAPI/ContactMangAPI.csproj
@@ -11,6 +11,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.19" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5" />
